Update markowitz efficient frontier

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -262,8 +262,12 @@
    url = {https://www.jstor.org/stable/2975974},
    year = {1952}
 }
-@misc{wikipedia_mpt,
-   author = {Wikipedia},
-   title = {Modern portfolio theory},
-   url = {https://en.wikipedia.org/wiki/Modern_portfolio_theory}
+@book{Bodie2014,
+   author = {Zvi. Bodie and Alex. Kane and Alan J.. Marcus},
+   edition = {10},
+   isbn = {9780077861674},
+   pages = {220-221},
+   publisher = {McGraw-Hill Education},
+   title = {Investments},
+   year = {2014}
 }
