--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -60,8 +60,8 @@ Solving the mean-variance optimisation problem for varying levels of target retu
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth]{figures/markowitz_frontier.jpg}
-    \caption{Efficient Frontier in Risk-Return Space. \cite{wikipedia_mpt}}
+    \includegraphics[width=0.8\textwidth]{figures/markowitz-efficient-frontier.png}
+    \caption{Efficient Frontier in Risk-Return Space. \cite{Bodie2014}}
     \label{fig:efficient_frontier}
 \end{figure}
 
