Report: Background - Portfolio (#17)

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -207,3 +207,67 @@
    title = {On Machine Learning models explainability in the banking sector: the case of SHAP},
    year = {2025}
 }
+@inbook{Bruce2014,
+   abstract = {Once a security is selected, its weight or position must be determined in order to construct the portfolio. Portfolio construction is the process of using security characteristics to combine the securities in a way that optimizes the portfolio’s outcomes. Security selection is usually considered the primary driver of portfolio returns, and portfolio construction is usually considered to primarily impact the portfolio’s risk. This chapter discusses the how characteristics of portfolio securities combine to determine the portfolio’s absolute risk and risk relative to a benchmark. The chapter also offers practical considerations to student-managed investment funds in optimizing a portfolio for various objectives.},
+   author = {Brian Bruce and Jason Greene},
+   city = {San Diego},
+   doi = {https://doi.org/10.1016/B978-0-12-374755-6.00004-2},
+   isbn = {978-0-12-374755-6},
+   booktitle = {Trading and Money Management in a Student-Managed Portfolio},
+   keywords = {Information Ratio,Sharpe Ratio,active weights,correlation,correlation matrix,covariance,covariance matrix,expected return,optimization,parameter uncertainty,portfolio construction,relative return,relative risk,security selection,standard deviation,total risk,tracking error,variance,weights},
+   pages = {133-178},
+   publisher = {Academic Press},
+   title = {Chapter 4 - Portfolio Construction},
+   url = {https://www.sciencedirect.com/science/article/pii/B9780123747556000042},
+   year = {2014}
+}
+@article{Li2019,
+   abstract = {Portfolio allocation is crucial for investment companies. However, getting the best strategy in a complex and dynamic stock market is challenging. In this paper, we propose a novel Adaptive Deep Deterministic Reinforcement Learning scheme (Adaptive DDPG) for the portfolio allocation task, which incorporates optimistic or pessimistic deep reinforcement learning that is reflected in the influence from prediction errors. Dow Jones 30 component stocks are selected as our trading stocks and their daily prices are used as the training and testing data. We train the Adaptive DDPG agent and obtain a trading strategy. The Adaptive DDPG's performance is compared with the vanilla DDPG, Dow Jones Industrial Average index and the traditional min-variance and mean-variance portfolio allocation strategies. Adaptive DDPG outperforms the baselines in terms of the investment return and the Sharpe ratio.},
+   author = {Xinyi Li and Yinchuan Li and Yuancheng Zhan and Xiao-Yang Liu},
+   month = {6},
+   title = {Optimistic Bull or Pessimistic Bear: Adaptive Deep Reinforcement Learning for Stock Portfolio Allocation},
+   url = {https://arxiv.org/abs/1907.01503v1},
+   year = {2019},
+   journal = {arXiv preprint arXiv:1907.01503}
+}
+@article{Sato2019,
+   abstract = {Financial portfolio management is one of the problems that are most frequently encountered in the investment industry. Nevertheless, it is not widely recognized that both Kelly Criterion and Risk Parity collapse into Mean Variance under some conditions, which implies that a universal solution to the portfolio optimization problem could potentially exist. In fact, the process of sequential computation of optimal component weights that maximize the portfolio's expected return subject to a certain risk budget can be reformulated as a discrete-time Markov Decision Process (MDP) and hence as a stochastic optimal control, where the system being controlled is a portfolio consisting of multiple investment components, and the control is its component weights. Consequently, the problem could be solved using model-free Reinforcement Learning (RL) without knowing specific component dynamics. By examining existing methods of both value-based and policy-based model-free RL for the portfolio optimization problem, we identify some of the key unresolved questions and difficulties facing today's portfolio managers of applying model-free RL to their investment portfolios.},
+   author = {Yoshiharu Sato},
+   keywords = {Portfolio Management,Quantitative Finance,Reinforcement Learning},
+   month = {4},
+   title = {Model-Free Reinforcement Learning for Financial Portfolios: A Brief Survey},
+   url = {https://arxiv.org/abs/1904.04973v2},
+   journal={arXiv preprint arXiv:1904.04973},
+   year = {2019}
+}
+@misc{kent,
+   author = {Financial Mathematics Clinic},
+   editor = {University of Kent},
+   pages = {8},
+   title = {Mean Variance Portfolio Theory},
+   url = {https://www.kent.ac.uk/learning/documents/slas-documents/mean-variance-portfolio.pdf}
+}
+@article{Markowitz1952,
+   author = {Harry Markowitz},
+   doi = {10.2307/2975974},
+   isbn = {9789812833655},
+   issn = {00221082},
+   issue = {1},
+   journal = {The Journal of Finance},
+   month = {3},
+   pages = {77-91},
+   publisher = {World Scientific Publishing Co.},
+   title = {Portfolio selection},
+   volume = {7},
+   url = {https://www.jstor.org/stable/2975974},
+   year = {1952}
+}
+@book{Bodie2014,
+   author = {Zvi. Bodie and Alex. Kane and Alan J.. Marcus},
+   edition = {10},
+   isbn = {9780077861674},
+   pages = {220-221},
+   publisher = {McGraw-Hill Education},
+   title = {Investments},
+   year = {2014}
+}
