Add DRL section intro

--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -95,7 +95,6 @@
     text={hyper-parameter},
     description={Parameter that is set before the learning process begins and control the learning process of a machine learning model, such as learning rate, batch size, and number of layers in a neural network}
 }
-
 \newglossaryentry{efficientfrontier}{
     name=Efficient Frontier,
     text={efficient frontier},
@@ -105,6 +104,19 @@
     name=Modern Portfolio Theory,
     text={Modern Portfolio Theory},
     description={Investment theory that aims to construct a portfolio of assets that maximises expected return for a given level of risk, or minimises risk for a given level of expected return, through diversification}
+}
+\newglossaryentry{supervisedlearning}{
+    name=Supervised Learning,
+    description={Machine learning task where a model is trained on labelled data to learn a mapping from inputs to outputs}
+}
+\newglossaryentry{unsupervisedlearning}{
+    name=Unsupervised Learning,
+    description={Machine learning task where a model learns patterns or structures in unlabelled data without explicit supervision}
+}
+\newglossaryentry{deepneuralnetwork}{
+    name=Deep Neural Network,
+    text={deep neural network},
+    description={Type of artificial neural network with multiple layers that can learn complex representations and patterns in data}
 }
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
@@ -121,3 +133,4 @@
 \newacronym{ai}{AI}{\Gls{artificialintelligence}}
 \newacronym{xai}{XAI}{\Gls{explainableai}}
 \newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
+\newacronym{dnn}{DNN}{\Gls{deepneuralnetwork}}
