--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -66,3 +66,20 @@ Solving the mean-variance optimisation problem for varying levels of target retu
 \end{figure}
 
 Despite the simplicity in the formulation of \acrshort{mpt}, its assumptions do not reflect the behaviour of real markets. Moreover, modern markets are dynamic, non-stationary, and feature non-linear relationships, which have driven research into other approaches better suited to capture the complexities of modern financial markets. 
+
+\section{Deep Reinforcement Learning} \label{sec:deepreinforcementlearning}
+
+\acrfull{drl} is a sub-field of \acrfull{dl} that combines \acrfull{dl} and \acrfull{rl} to solve sequential decision-making problems with high-dimensionality in the environment representation. This approach has gained significant attention in recent years due to its success in various applications, including robotics, game playing, and finance. \insertref{ADD CITATION}
+
+\acrlong{ml} is a branch of \acrfull{ai} that focuses on the use of data an algorithms to imitate the way humans learn, gradually improving their accuracy over time \insertref{15}. There are three main tasks in \acrshort{ml}\insertref{16}:
+
+\begin{itemize}
+    \item \textbf{\Gls{supervisedlearning}}: Task of inferring a classification or regression from labelled training data, where the model learns to map inputs to outputs based on examples.
+    \item \textbf{\Gls{unsupervisedlearning}}: Task of drawing inferences from datasets consisting of unlabelled input data, where the model learns to identify patterns or structures in the data.
+    \item \textbf{\acrlong{rl}}: Task of training an agent to sequentially make decisions by taking actions in an environment with the goal of maximising cumulative reward, using feedback from the environment to learn.
+\end{itemize}
+
+Consequently, \acrshort{rl} emerges as a framework for solving complex decision-making problems, where an agent continuously interacts with an environment, receiving observations about its states and rewards based on the actions taken. The agent's objective is to learn a policy that maximises the expected cumulative reward over time.
+
+Conversely, \acrlong{dl} is not a \acrshort{ml} task, but rather a set of methods and techniques to solve such \acrshort{ml} tasks, specially in supervised and unsupervised learning. \acrshort{dl} focuses on the use of \acrfull{dnn} \insertref{17}, which are characterised by a succession of layers of non-linear transformation that allow the model to learn a representation of the data with various levels of abstraction.
+
