--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -118,6 +118,21 @@
     text={deep neural network},
     description={Type of artificial neural network with multiple layers that can learn complex representations and patterns in data}
 }
+\newglossaryentry{markovdecisionprocess}{
+    name=Markov Decision Process,
+    text={Markov Decision Process},
+    description={Mathematical framework for modelling decision-making in situations where outcomes are partly random and partly under the control of a decision maker, characterised by states, actions, rewards, and transition probabilities}
+}
+\newglossaryentry{partiallyobservablemarkovdecisionprocess}{
+    name=Partially Observable Markov Decision Process,
+    text={Partially Observable Markov Decision Process},
+    description={Extension of \Gls{markovdecisionprocess} where the agent does not have access to the complete state information, requiring the use of belief states or observations to make decisions}
+}
+\newglossaryentry{bellmanequations}{
+    name=Bellman Equations,
+    text={Bellman equations},
+    description={Set of equations that describe the relationship between the value of a state or action and the values of subsequent states or actions in dynamic programming and reinforcement learning, used to compute optimal policies} 
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
@@ -134,3 +149,5 @@
 \newacronym{xai}{XAI}{\Gls{explainableai}}
 \newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
 \newacronym{dnn}{DNN}{\Gls{deepneuralnetwork}}
+\newacronym{mdp}{MDP}{\Gls{markovdecisionprocess}}
+\newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
